UpdateAppointment with send the email works